# -OmniCalc-Pro

./: .gitignore  LICENSE  README.md  config.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/themes/: dark.qss  light.qss
core/: __init__.py  calculator_engine.py  converter_engine.py  error_handler.py  finance_engine.py  graph_engine.py  history_manager.py  matrix_engine.py  parser.py  programmer_engine.py  safe_evaluator.py  scientific_engine.py  services.py  statistics_engine.py
tests/: conftest.py  test_calculator_engine.py  test_converter_engine.py  test_error_handler.py  test_finance_engine.py  test_fluent_theme.py  test_graph_engine.py  test_helpers.py  test_history_manager.py  test_icon_loader.py  test_logger.py  test_matrix_engine.py  test_parser.py  test_programmer_engine.py  test_safe_evaluator.py  test_safe_evaluator2.py  test_scientific_engine.py  test_services.py  test_statistics_engine.py  test_validators.py
ui/: basic_page.py  converter_page.py  dashboard.py  finance_page.py  fluent_theme.py  graph_page.py  history_page.py  icon_loader.py  main_window.py  matrix_page.py  programmer_page.py  scientific_page.py  settings_page.py  sidebar.py  statistics_page.py  toast.py  widgets.py  win11_effects.py
utils/: constants.py  helpers.py  logger.py  themes.py  validators.py
