[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnicalc-pro"
version = "2.1.0"
description = "An all-in-one advanced professional calculator for Windows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OmniCalc Pro Team"}
]

dependencies = [
    "PySide6>=6.6.0",
    "numpy>=1.24.0",
    "sympy>=1.12.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "qtawesome>=1.2.0",
    "pyperclip>=1.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
